trunk/Archive2/f4/b38250248cde5b/output
main.cpp:11:18: error: no matching function for call to 'size'
    std::cout << size(a);
                 ^~~~
main.cpp:3:47: note: candidate template ignored: substitution failure [with T = int, N = 0]: zero-length arrays are not permitted in C++
template <class T, size_t N> constexpr size_t size(const T(&array)[N]) noexcept
                                              ^                    ~
1 error generated.
